feat: Implement chat and tool routes with enhanced functionality
- Added chat route for conversational interactions, including system prompts and tool execution.
- Introduced tool route for universal tool calls, allowing AI to access various functionalities.
- Developed a database search tool to query conversation history in MongoDB.
- Created an index for all tools, enabling easy access and execution of various functionalities.
- Implemented weather, news, time, web scraping, and web search tools with fallback mechanisms.
- Integrated child process handling for heavy tool calls to avoid blocking the main thread.
- Added comprehensive tests for all tools to ensure reliability and correctness.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,41 @@
-# Backend .env example
+###############################################
+# Example environment variables for AI assistant backend
+# Copy this file to .env and fill in your real API keys and secrets
+###############################################
+
+# Node environment
 NODE_ENV=development
-PORT=3000
+# Server port
+PORT=3300
+# MongoDB connection string
 MONGO_URL=mongodb://localhost:27017/chatApp
+# Ollama host (for local LLM)
 OLLAMA_HOST=http://localhost:11434
+# JWT/Secret key for authentication (use a strong random value)
 SECRET_KEY=supersecret
+# Allowed origins for CORS
 ALLOWED_ORIGINS=http://localhost:8080,http://localhost:5173,https://andhru.com,https://www.andhru.com,http://andhru.com
+
+# Admin credentials
+ADMIN_USER=admin
+ADMIN_PASSWORD=Admin@123
+ADMIN_EMAIL=admin@example.com
+
+# API Keys for Tools (Optional - tools will use mock data if not provided)
+# OpenWeatherMap API: https://openweathermap.org/api
+OPENWEATHER_API_KEY=your_openweathermap_api_key_here
+# WeatherAPI.com API key (for Indian weather)
+WEATHERAPI_KEY=your_weatherapi_key_here
+# NewsAPI.org API key (for global news)
+NEWS_API_KEY=your_newsapi_key_here
+# CoinGecko API (public, no key required)
+# COINGECKO_API_URL=https://api.coingecko.com/api/v3/simple/price
+# Node Geocoder (OpenStreetMap, no key required)
+# No API key needed for default provider
+# Yahoo Finance2 (public, no key required)
+# No API key needed
+# Other custom secrets (for internal use)
+CUSTOM_SECRET=your_custom_secret_here
+# Example: Add any other required keys below
+# ANOTHER_API_KEY=your_key_here
+###############################################
