--- a/package.json
+++ b/package.json
@@ -1,23 +1,46 @@
 {
-  "name": "chat-app",
+  "name": "chat-localhost-llama3",
   "version": "1.0.2",
   "private": true,
-  "description": "this simple react app to access llama3 module by ollama rest api.",
+  "description": "Modern, accessible, and secure self-hosted chat application powered by Ollama LLM with JWT authentication, voice mode (STT/TTS), conversation management, and REST/MCP chat modes. Full-stack solution with React frontend, Fastify TypeScript backend, MongoDB, and Docker orchestration.",
   "type": "module",
   "main": "index.js",
-  "workspaces": [
-    "backend",
-    "frontend"
-  ],
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
-    "start:api": "docker compose up -d api",
-    "start:app": "docker compose up -d app",
+    "preinstall": "echo Installing dependencies for all workspaces...",
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
     "start": "docker compose up -d",
-    "start:backend": "cd backend && yarn dev",
-    "start:frontend": "cd frontend && yarn dev",
+    "start:dev": "docker compose -f docker-compose-dev.yml up -d",
+    "start:mcp": "docker compose -f docker-compose-mcp.yml up -d",
+    "stop": "docker compose down",
+    "stop:dev": "docker compose -f docker-compose-dev.yml down",
+    "stop:volumes": "docker compose down -v",
+    "restart": "npm run stop && npm run start",
+    "logs": "docker compose logs -f",
+    "logs:backend": "docker compose logs -f backend",
+    "logs:frontend": "docker compose logs -f nginx",
+    "logs:ollama": "docker compose logs -f ollama",
+    "ps": "docker compose ps",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:both": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "build:backend": "cd backend && npm run build",
+    "build:frontend": "cd frontend && npm run build",
+    "build:all": "npm run build:backend && npm run build:frontend",
+    "lint:backend": "cd backend && npm run lint",
+    "lint:frontend": "cd frontend && npm run lint",
+    "lint:all": "npm run lint:backend && npm run lint:frontend",
+    "clean": "npm run stop:volumes && rm -rf node_modules backend/node_modules frontend/node_modules backend/dist frontend/dist",
+    "clean:docker": "docker system prune -af --volumes",
+    "db:dump": "docker exec mongo mongodump --out=/dump",
+    "db:restore": "docker exec mongo mongorestore /dump",
     "release": "standard-version",
     "release:minor": "standard-version --release-as minor",
-    "release:major": "standard-version --release-as major"
+    "release:major": "standard-version --release-as major",
+    "release:patch": "standard-version --release-as patch"
   },
   "standard-version": {
     "skip": {
@@ -25,16 +48,25 @@
     }
   },
   "keywords": [
-    "reactJs",
-    "personal",
-    "chat",
-    "app",
+    "llama3",
+    "ollama",
+    "chat-application",
+    "react",
+    "fastify",
+    "typescript",
+    "mongodb",
     "docker",
-    "compose",
-    "api",
-    "app",
-    "chatApi",
-    "chatApp"
+    "self-hosted",
+    "jwt-authentication",
+    "voice-mode",
+    "stt",
+    "tts",
+    "mcp",
+    "rest-api",
+    "accessibility",
+    "local-llm",
+    "ai-chat",
+    "conversation-management"
   ],
   "homepage": "https://github.com/bobbysingh2005/chat-localhost-llama3#readme",
   "bugs": {
