feat: Implement WebSocket server and reminder notification system
- Added WebSocket server setup in backend (src/ws.ts) for real-time communication.
- Created reminder notification component in frontend (src/components/ReminderNotification.jsx) to display reminders.
- Integrated socket.io for receiving reminder events in the frontend.
- Developed tests for reminder notifications and cron job functionality.
- Enhanced news retrieval tests to ensure accurate sorting and content validation.
- Updated developer and user documentation to reflect new features and usage instructions.
- Added model testing app for diagnosing API performance and prompt quality.

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,19 @@
     "@types/mongoose": "latest",
     "axios": "latest",
     "bcrypt": "latest",
+    "cheerio": "^1.1.2",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "latest",
     "env-schema": "latest",
     "fastify": "latest",
     "fastify-cookie": "latest",
     "mongoose": "latest",
+    "node-cron": "^4.2.1",
     "pino-pretty": "latest",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "latest",
